--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
+<!-- Primary Meta Tags -->
+<title>Slide book</title>
+<meta name="title" content="Slide book" />
+<meta name="description" content="Slide book" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://majestic-maamoul-439e8f.netlify.app/" />
+<meta property="og:title" content="Slide book" />
+<meta property="og:description" content="Slide book" />
+<meta property="og:image" content="/meta-img.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://majestic-maamoul-439e8f.netlify.app/" />
+<meta property="twitter:title" content="Slide book" />
+<meta property="twitter:description" content="Slide book" />
+<meta property="twitter:image" content="/meta-img.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
     <style>
         body {
             background-color: #f4f4f4;
